--- a/Website/EhsInput/package.json
+++ b/Website/EhsInput/package.json
@@ -13,13 +13,16 @@
     "@azure/msal-browser": "^3.22.0",
     "@azure/msal-react": "^2.0.22",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
